hphp/hack/test/typecheck/async_hint4.php.exp
File "async_hint4.php", line 7, characters 39-39:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
